OCD REFACTOR Pointscales to PointScales & FIX 501 sur /pointScales/{id}
my bad s'il y a des bugs a cause de ca :/
