# gamification-impl/src/main/java/ch/heigvd/amt/gamification/api/endpoints/PointScalesApiController.java
@@ -1,17 +1,19 @@
 package ch.heigvd.amt.gamification.api.endpoints;
 
-import ch.heigvd.amt.gamification.api.PointscaleApi;
+import ch.heigvd.amt.gamification.api.PointScalesApi;
 import ch.heigvd.amt.gamification.api.model.PointScale;
 import ch.heigvd.amt.gamification.entities.ApplicationEntity;
-import ch.heigvd.amt.gamification.entities.PointscaleEntity;
+import ch.heigvd.amt.gamification.entities.PointScaleEntity;
 import ch.heigvd.amt.gamification.repositories.PointScaleRepository;
 import io.swagger.annotations.ApiParam;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.server.ResponseStatusException;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import javax.servlet.ServletRequest;
@@ -21,7 +23,7 @@ import java.util.ArrayList;
 import java.util.List;
 
 @Controller
-public class PointScaleApiController implements PointscaleApi {
+public class PointScalesApiController implements PointScalesApi {
 
     @Autowired
     PointScaleRepository pointScaleRepository;
@@ -30,44 +32,49 @@ public class PointScaleApiController implements PointscaleApi {
     ServletRequest request;
 
     @ResponseStatus(HttpStatus.CREATED)
-    public ResponseEntity<Void> createPointscale(@ApiParam(value = "", required = true) @Valid @RequestBody PointScale pointscale) {
+    public ResponseEntity<Void> createPointscale(@ApiParam(value = "", required = true) @Valid @RequestBody PointScale pointScale) {
         // Récupère l'application associée à partir de l'API Key
         ApplicationEntity applicationEntity = (ApplicationEntity) request.getAttribute("applicationEntity");
 
         // Vérifie que le badge n'existe pas déjà pour l'application donnée
         // Retourne un 409 - Conflict si c'est le cas
-        if(pointScaleRepository.findByApplicationEntityAndName(applicationEntity, pointscale.getName()) != null)
+        if(pointScaleRepository.findByApplicationEntityAndName(applicationEntity, pointScale.getName()) != null)
             return new ResponseEntity<>(HttpStatus.CONFLICT);
 
-        PointscaleEntity newPointscaleEntity = toPointscaleEntity(pointscale);
-        newPointscaleEntity.setApplicationEntity(applicationEntity);
-        pointScaleRepository.save(newPointscaleEntity);
+        PointScaleEntity newPointScaleEntity = toPointScaleEntity(pointScale);
+        newPointScaleEntity.setApplicationEntity(applicationEntity);
+        pointScaleRepository.save(newPointScaleEntity);
 
         URI location = ServletUriComponentsBuilder
             .fromCurrentRequest().path("/{id}")
-            .buildAndExpand(newPointscaleEntity.getId()).toUri();
+            .buildAndExpand(newPointScaleEntity.getId()).toUri();
 
         return ResponseEntity.created(location).build();
     }
 
     public ResponseEntity<List<PointScale>> getPointScales() {
-        List<PointScale> pointscales = new ArrayList<>();
-        for(PointscaleEntity newPointscaleEntity : pointScaleRepository.findAllByApplicationEntity((ApplicationEntity)
+        List<PointScale> pointScales = new ArrayList<>();
+        for(PointScaleEntity newPointScaleEntity : pointScaleRepository.findAllByApplicationEntity((ApplicationEntity)
             request.getAttribute("applicationEntity"))) {
-            pointscales.add(toPointscale(newPointscaleEntity));
+            pointScales.add(toPointscale(newPointScaleEntity));
         }
-        return ResponseEntity.ok(pointscales);
+        return ResponseEntity.ok(pointScales);
     }
 
-    private PointScale toPointscale(PointscaleEntity pointscaleEntity) {
+    public ResponseEntity<PointScale> getPointScale(@ApiParam(value = "", required = true) @PathVariable("id") Integer id) {
+        PointScaleEntity existingPointscaleEntity = pointScaleRepository.findById(Long.valueOf(id)).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+        return ResponseEntity.ok(toPointscale(existingPointscaleEntity));
+    }
+
+    private PointScale toPointscale(PointScaleEntity pointScaleEntity) {
         PointScale pointScale = new PointScale();
-        pointScale.setName(pointscaleEntity.getName());
-        pointScale.setDescription(pointscaleEntity.getDescription());
+        pointScale.setName(pointScaleEntity.getName());
+        pointScale.setDescription(pointScaleEntity.getDescription());
         return pointScale;
     }
 
-    private PointscaleEntity toPointscaleEntity(PointScale pointScale) {
-        PointscaleEntity entity = new PointscaleEntity();
+    private PointScaleEntity toPointScaleEntity(PointScale pointScale) {
+        PointScaleEntity entity = new PointScaleEntity();
         entity.setName(pointScale.getName());
         entity.setDescription(pointScale.getDescription());
         return entity;
